--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ dependencies:
 
     # Retrieve our secrets from the CircleCI environment
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
-    # - sed  s/YOUR-API-KEY/$API_KEY/ api_key.py.sample > api_key.py
+    - sed -i 's/HIDDEN_TELEGRAM_TOKEN/$HIDDEN_TELEGRAM_TOKEN/g' app.yaml
 
     # Vendor our dependencies
     - mkdir -p lib
