--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,6 @@ dependencies:
 
     # Retrieve our secrets from the CircleCI environment
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
-    - sed -i 's/HIDDEN_TELEGRAM_TOKEN/$HIDDEN_TELEGRAM_TOKEN/g' app.yaml
 
     # Vendor our dependencies
     - mkdir -p lib
@@ -26,6 +25,9 @@ dependencies:
     - gcloud auth activate-service-account --key-file ${HOME}/client-secret.json
 
     - gcloud config set project $GCLOUD_PROJECT
+    
+    - sed -i 's/HIDDEN_TELEGRAM_TOKEN/$HIDDEN_TELEGRAM_TOKEN/g' app.yaml
+
 
 test:
   override:
@@ -39,5 +41,4 @@ deployment:
         # Deploy to AppEngine
         - gcloud -q app deploy app.yaml --promote --version=1
 
-        # Run our E2E Test
-        # - python e2e_test.py
+        - curl -s 'https://$GCLOUD_PROJECT.appspot.com' > /dev/null
