--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,7 @@ dependencies:
     # Retrieve our secrets from the CircleCI environment
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
 
+    - echo $CLIENT_SECRET | base64 --decode
     # Vendor our dependencies
     - mkdir -p lib
     - pip install -r requirements.txt -t lib
