--- a/circle.yml
+++ b/circle.yml
@@ -26,7 +26,7 @@ dependencies:
     - gcloud auth activate-service-account --key-file ${HOME}/client-secret.json
 
     - gcloud config set project $GCLOUD_PROJECT
-    
+
     - sed -i 's/HIDDEN_TELEGRAM_TOKEN/$HIDDEN_TELEGRAM_TOKEN/g' app.yaml
 
 
@@ -42,4 +42,4 @@ deployment:
         # Deploy to AppEngine
         - gcloud -q app deploy app.yaml --promote --version=1 --verbosity=debug
 
-        - curl -s 'https://$GCLOUD_PROJECT.appspot.com' > /dev/null
+        # - curl -s 'https://$GCLOUD_PROJECT.appspot.com' > /dev/null
