--- a/circle.yml
+++ b/circle.yml
@@ -17,6 +17,7 @@ dependencies:
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
 
     - echo $CLIENT_SECRET | base64 --decode
+
     # Vendor our dependencies
     - mkdir -p lib
     - pip install -r requirements.txt -t lib
@@ -32,8 +33,8 @@ dependencies:
 
 test:
   override:
-    # run local unit tests
-    - python -c 'print("")'
+    - curl -s 'https://$GCLOUD_PROJECT.appspot.com' > /dev/null
+
 
 deployment:
     staging:
@@ -41,5 +42,3 @@ deployment:
         commands:
         # Deploy to AppEngine
         - gcloud -q app deploy app.yaml --promote --version=1 --verbosity=debug
-
-        # - curl -s 'https://$GCLOUD_PROJECT.appspot.com' > /dev/null
